# rust-boids

./: Cargo.toml  README.md
src/: main.rs
